src/antlr4/tfParser.java
package antlr4;

// Generated from tfParser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class tfParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EOL=1, WS=2, LINECOMMENT=3, INLINECOMMENT=4, FOR=5, IN=6, IF=7, BOOL=8, 
		NULL=9, TERRAFORM=10, MODULE=11, PROVIDER=12, RESOURCE=13, DATA=14, LOCALS=15, 
		VARIABLE=16, OUTPUT=17, PLUS=18, MINUS=19, STAR=20, DIVIDE=21, LT=22, 
		GT=23, LTE=24, GTE=25, DEQUAL=26, NEQUAL=27, AND=28, OR=29, NOT=30, QUESTION=31, 
		COLON=32, EQUALS=33, ARROW=34, LCURL=35, RCURL=36, LBRACKET=37, RBRACKET=38, 
		LPAREN=39, RPAREN=40, DOTS=41, DOT=42, COMMA=43, INTEGER=44, FLOAT=45, 
		EXPONENTIAL=46, IDENTIFIER=47, HEREDOC_INDENT=48, HEREDOC=49, ESCAPE_INTERPO=50, 
		INTERPO_PUSH=51, ESCAPE_DIRECTIVE=52, DIRECTIVE_PUSH=53, DOLLAR=54, MODULO=55, 
		QUOTE=56, STRING_TEXT=57, ESCAPE_CHAR=58, HEREDOC_TEXT=59, CLOSE_HEREDOC=60;
	public static final int
		RULE_file = 0, RULE_block = 1, RULE_bodyBegin = 2, RULE_bodyEnd = 3, RULE_terraform = 4, 
		RULE_local = 5, RULE_module = 6, RULE_variable = 7, RULE_output = 8, RULE_provider = 9, 
		RULE_resource = 10, RULE_data = 11, RULE_blockName = 12, RULE_blockType = 13, 
		RULE_argument = 14, RULE_identifier = 15, RULE_keyword = 16, RULE_expression = 17, 
		RULE_negateOp = 18, RULE_arithmeticOp = 19, RULE_compareOp = 20, RULE_logicOp = 21, 
		RULE_accessor = 22, RULE_index = 23, RULE_attr = 24, RULE_splat = 25, 
		RULE_attrSplat = 26, RULE_fullSplat = 27, RULE_exprTerm = 28, RULE_literal = 29, 
		RULE_reference = 30, RULE_function = 31, RULE_args = 32, RULE_list = 33, 
		RULE_map = 34, RULE_items = 35, RULE_elements = 36, RULE_element = 37, 
		RULE_elementsEOL = 38, RULE_elementEOL = 39, RULE_forExpr = 40, RULE_forList = 41, 
		RULE_forMap = 42, RULE_string = 43, RULE_heredoc = 44, RULE_interpo = 45, 
		RULE_directive = 46;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "block", "bodyBegin", "bodyEnd", "terraform", "local", "module", 
			"variable", "output", "provider", "resource", "data", "blockName", "blockType", 
			"argument", "identifier", "keyword", "expression", "negateOp", "arithmeticOp", 
			"compareOp", "logicOp", "accessor", "index", "attr", "splat", "attrSplat", 
			"fullSplat", "exprTerm", "literal", "reference", "function", "args", 
			"list", "map", "items", "elements", "element", "elementsEOL", "elementEOL", 
			"forExpr", "forList", "forMap", "string", "heredoc", "interpo", "directive"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'for'", "'in'", "'if'", null, "'null'", 
			"'terraform'", "'module'", "'provider'", "'resource'", "'data'", "'locals'", 
			"'variable'", "'output'", "'+'", "'-'", "'*'", "'/'", "'<'", "'>'", "'<='", 
			"'>='", "'=='", "'!='", "'&&'", "'||'", "'!'", "'?'", "':'", "'='", "'=>'", 
			"'{'", null, "'['", "']'", "'('", "')'", "'...'", "'.'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "EOL", "WS", "LINECOMMENT", "INLINECOMMENT", "FOR", "IN", "IF", 
			"BOOL", "NULL", "TERRAFORM", "MODULE", "PROVIDER", "RESOURCE", "DATA", 
			"LOCALS", "VARIABLE", "OUTPUT", "PLUS", "MINUS", "STAR", "DIVIDE", "LT", 
			"GT", "LTE", "GTE", "DEQUAL", "NEQUAL", "AND", "OR", "NOT", "QUESTION", 
			"COLON", "EQUALS", "ARROW", "LCURL", "RCURL", "LBRACKET", "RBRACKET", 
			"LPAREN", "RPAREN", "DOTS", "DOT", "COMMA", "INTEGER", "FLOAT", "EXPONENTIAL", 
			"IDENTIFIER", "HEREDOC_INDENT", "HEREDOC", "ESCAPE_INTERPO", "INTERPO_PUSH", 
			"ESCAPE_DIRECTIVE", "DIRECTIVE_PUSH", "DOLLAR", "MODULO", "QUOTE", "STRING_TEXT", 
			"ESCAPE_CHAR", "HEREDOC_TEXT", "CLOSE_HEREDOC"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "tfParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }
	
	/* Solution for context-dependent EOL detection citation: */
	// https://stackoverflow.com/questions/41667217/antlr4-how-can-i-both-hide-and-use-tokens-in-a-grammar
	//
	// Backtrack through token channels until we find either :
		
	boolean isEOL()
	{
        int channel = getCurrentToken().getChannel();
        int index = getCurrentToken().getTokenIndex();
        
        do {
        	channel = getTokenStream().get(--index).getChannel();
        } while (channel != 0 && channel != 1);
        
        return (channel == 1);
	}

	public tfParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(tfParser.EOF, 0); }
		public List<TerraformContext> terraform() {
			return getRuleContexts(TerraformContext.class);
		}
		public TerraformContext terraform(int i) {
			return getRuleContext(TerraformContext.class,i);
		}
		public List<ModuleContext> module() {
			return getRuleContexts(ModuleContext.class);
		}
		public ModuleContext module(int i) {
			return getRuleContext(ModuleContext.class,i);
		}
		public List<ProviderContext> provider() {
			return getRuleContexts(ProviderContext.class);
		}
		public ProviderContext provider(int i) {
			return getRuleContext(ProviderContext.class,i);
		}
		public List<ResourceContext> resource() {
			return getRuleContexts(ResourceContext.class);
		}
		public ResourceContext resource(int i) {
			return getRuleContext(ResourceContext.class,i);
		}
		public List<DataContext> data() {
			return getRuleContexts(DataContext.class);
		}
		public DataContext data(int i) {
			return getRuleContext(DataContext.class,i);
		}
		public List<LocalContext> local() {
			return getRuleContexts(LocalContext.class);
		}
		public LocalContext local(int i) {
			return getRuleContext(LocalContext.class,i);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<OutputContext> output() {
			return getRuleContexts(OutputContext.class);
		}
		public OutputContext output(int i) {
			return getRuleContext(OutputContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tfParserListener ) ((tfParserListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tfParserListener ) ((tfParserListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tfParserVisitor ) return ((tfParserVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TERRAFORM) | (1L << MODULE) | (1L << PROVIDER) | (1L << RESOURCE) | (1L << DATA) | (1L << LOCALS) | (1L << VARIABLE) | (1L << OUTPUT))) != 0)) {
				{
				setState(102);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case TERRAFORM:
					{
					setState(94);
					terraform();
					}
					break;
				case MODULE:
					{
					setState(95);
					module();
					}
					break;
				case PROVIDER:
					{
					setState(96);
					provider();
					}
					break;
				case RESOURCE:
					{
					setState(97);
					resource();
					}
					break;
				case DATA:
					{
					setState(98);
					data();
					}
					break;
				case LOCALS:
					{
					setState(99);
					local();
					}
					break;
				case VARIABLE:
					{
					setState(100);
					variable();
					}
					break;
				case OUTPUT:
					{
					setState(101);
					output();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public BodyBeginContext bodyBegin() {
			return getRuleContext(BodyBeginContext.class,0);
		}
		public BodyEndContext bodyEnd() {
			return getRuleContext(BodyEndContext.class,0);
		}
		public List<StringContext> string() {
			return getRuleContexts(StringContext.class);
		}
		public StringContext string(int i) {
			return getRuleContext(StringContext.class,i);
		}
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tfParserListener ) ((tfParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tfParserListener ) ((tfParserListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tfParserVisitor ) return ((tfParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			identifier();
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FOR) | (1L << IN) | (1L << IF) | (1L << BOOL) | (1L << NULL) | (1L << TERRAFORM) | (1L << MODULE) | (1L << PROVIDER) | (1L << RESOURCE) | (1L << DATA) | (1L << LOCALS) | (1L << VARIABLE) | (1L << OUTPUT) | (1L << IDENTIFIER) | (1L << QUOTE))) != 0)) {
				{
				setState(112);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case FOR:
				case IN:
				case IF:
				case BOOL:
				case NULL:
				case TERRAFORM:
				case MODULE:
				case PROVIDER:
				case RESOURCE:
				case DATA:
				case LOCALS:
				case VARIABLE:
				case OUTPUT:
				case IDENTIFIER:
					{
					setState(110);
					identifier();
					}
					break;
				case QUOTE:
					{
					setState(111);
					string();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			bodyBegin();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FOR) | (1L << IN) | (1L << IF) | (1L << BOOL) | (1L << NULL) | (1L << TERRAFORM) | (1L << MODULE) | (1L << PROVIDER) | (1L << RESOURCE) | (1L << DATA) | (1L << LOCALS) | (1L << VARIABLE) | (1L << OUTPUT) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(120);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(118);
					argument();
					}
					break;
				case 2:
					{
					setState(119);
					block();
					}
					break;
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(125);
			bodyEnd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyBeginContext extends ParserRuleContext {
		public TerminalNode LCURL() { return getToken(tfParser.LCURL, 0); }
		public BodyBeginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bodyBegin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tfParserListener ) ((tfParserListener)listener).enterBodyBegin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tfParserListener ) ((tfParserListener)listener).exitBodyBegin(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tfParserVisitor ) return ((tfParserVisitor<? extends T>)visitor).visitBodyBegin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyBeginContext bodyBegin() throws RecognitionException {
		BodyBeginContext _localctx = new BodyBeginContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bodyBegin);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(LCURL);
			setState(128);
			if (!( isEOL() )) throw new FailedPredicateException(this, " isEOL() ");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyEndContext extends ParserRuleContext {
		public TerminalNode RCURL() { return getToken(tfParser.RCURL, 0); }
		public BodyEndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bodyEnd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tfParserListener ) ((tfParserListener)listener).enterBodyEnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tfParserListener ) ((tfParserListener)listener).exitBodyEnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tfParserVisitor ) return ((tfParserVisitor<? extends T>)visitor).visitBodyEnd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyEndContext bodyEnd() throws RecognitionException {
		BodyEndContext _localctx = new BodyEndContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bodyEnd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(RCURL);
			setState(131);
			if (!( isEOL() )) throw new FailedPredicateException(this, " isEOL() ");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerraformContext extends ParserRuleContext {
		public TerminalNode TERRAFORM() { return getToken(tfParser.TERRAFORM, 0); }
		public BodyBeginContext bodyBegin() {
			return getRuleContext(BodyBeginContext.class,0);
		}
		public BodyEndContext bodyEnd() {
			return getRuleContext(BodyEndContext.class,0);
		}
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerraformContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terraform; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tfParserListener ) ((tfParserListener)listener).enterTerraform(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tfParserListener ) ((tfParserListener)listener).exitTerraform(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tfParserVisitor ) return ((tfParserVisitor<? extends T>)visitor).visitTerraform(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TerraformContext terraform() throws RecognitionException {
		TerraformContext _localctx = new TerraformContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_terraform);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(TERRAFORM);
			setState(134);
			bodyBegin();
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FOR) | (1L << IN) | (1L << IF) | (1L << BOOL) | (1L << NULL) | (1L << TERRAFORM) | (1L << MODULE) | (1L << PROVIDER) | (1L << RESOURCE) | (1L << DATA) | (1L << LOCALS) | (1L << VARIABLE) | (1L << OUTPUT) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(137);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(135);
					argument();
					}
					break;
				case 2:
					{
					setState(136);
					block();
					}
					break;
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(142);
			bodyEnd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocalContext extends ParserRuleContext {
		public TerminalNode LOCALS() { return getToken(tfParser.LOCALS, 0); }
		public BodyBeginContext bodyBegin() {
			return getRuleContext(BodyBeginContext.class,0);
		}
		public BodyEndContext bodyEnd() {
			return getRuleContext(BodyEndContext.class,0);
		}
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public LocalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_local; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tfParserListener ) ((tfParserListener)listener).enterLocal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tfParserListener ) ((tfParserListener)listener).exitLocal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tfParserVisitor ) return ((tfParserVisitor<? extends T>)visitor).visitLocal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LocalContext local() throws RecognitionException {
		LocalContext _localctx = new LocalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_local);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(LOCALS);
			setState(145);
			bodyBegin();
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FOR) | (1L << IN) | (1L << IF) | (1L << BOOL) | (1L << NULL) | (1L << TERRAFORM) | (1L << MODULE) | (1L << PROVIDER) | (1L << RESOURCE) | (1L << DATA) | (1L << LOCALS) | (1L << VARIABLE) | (1L << OUTPUT) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(148);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(146);
					argument();
					}
					break;
				case 2:
					{
					setState(147);
					block();
					}
					break;
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(153);
			bodyEnd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public TerminalNode MODULE() { return getToken(tfParser.MODULE, 0); }
		public BlockNameContext blockName() {
			return getRuleContext(BlockNameContext.class,0);
		}
		public BodyBeginContext bodyBegin() {
			return getRuleContext(BodyBeginContext.class,0);
		}
		public BodyEndContext bodyEnd() {
			return getRuleContext(BodyEndContext.class,0);
		}
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tfParserListener ) ((tfParserListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tfParserListener ) ((tfParserListener)listener).exitModule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tfParserVisitor ) return ((tfParserVisitor<? extends T>)visitor).visitModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(MODULE);
			setState(156);
			blockName();
			setState(157);
			bodyBegin();
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FOR) | (1L << IN) | (1L << IF) | (1L << BOOL) | (1L << NULL) | (1L << TERRAFORM) | (1L << MODULE) | (1L << PROVIDER) | (1L << RESOURCE) | (1L << DATA) | (1L << LOCALS) | (1L << VARIABLE) | (1L << OUTPUT) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(160);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(158);
					argument();
					}
					break;
				case 2:
					{
					setState(159);
					block();
					}
					break;
				}
				}
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(165);
			bodyEnd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
